# rc_p1

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt  main.c
client/libraries/client_network/: CMakeLists.txt  client_network.c  client_network.h
client/libraries/utils/: CMakeLists.txt  utils.c  utils.h
custom-libraries/myLogger/: myLogger.c  myLogger.h
custom-libraries/myString/: myString.c  myString.h
custom-libraries/system_info/: system_info.c  system_info.h
custom_libraries/: CMakeLists.txt
custom_libraries/custom_c_logger/: CMakeLists.txt  custom_c_logger.c  custom_c_logger.h
custom_libraries/custom_c_string/: CMakeLists.txt  custom_c_string.c  custom_c_string.h
custom_libraries/system_info/: CMakeLists.txt  system_info.c  system_info.h
server/: CMakeLists.txt  README.md  main.c
server/config/: registered_users.json
server/custom-libraries/myLogger/: myLogger.c  myLogger.h
server/libraries/algorithms/custom_boyer_moore/: CMakeLists.txt  custom_boyer_moore.c  custom_boyer_moore.h
server/libraries/algorithms/custom_c_hash_set/: CMakeLists.txt  custom_c_hashset.c  custom_c_hashset.h
server/libraries/client_handler/: CMakeLists.txt  client_handler.c  client_handler.h
server/libraries/server_functionalities/: server_functionalities.c  server_functionalities.h
server/libraries/server_network/: CMakeLists.txt  server_network.c  server_network.h
server/libraries/web_handler/: CMakeLists.txt  web_handler.c  web_handler.h
server/libraries/web_handler/downloader/: CMakeLists.txt  downloader.c  downloader.h
server/libraries/web_handler/file_hierarchy_creator/: CMakeLists.txt  file_hierarchy_creator.c  file_hierarchy_creator.h
server/libraries/web_handler/url_extractor/: CMakeLists.txt  url_extractor.c  url_extractor.h
server/libraries/web_handler/url_handler/: CMakeLists.txt  url_handler.c  url_handler.h
server/libraries/web_handler/url_table/: CMakeLists.txt  url_table.c  url_table.h
